--- a/src/style.css
+++ b/src/style.css
@@ -1,16 +1,86 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;500;600;700;800&display=swap');
+
 * {
     background-color: white;
     margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-#root {
+/*#root {
     margin-top: 50%;
+}*/
+
+/*Celular*/
+@media only screen and (max-width: 480px){
+.img-login {
+    max-width: 70%;
+    margin-top: 30px;    
 }
 
-.img-login {
+h2{
+    font-family: 'Raleway', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 33px;
+    text-align: center;
+    color: #194F37;
+    margin-top: 50px;
+}
+
+.input-email{
+box-sizing: border-box;
+margin-top: 35px;
+width: 290px;
+height: 38px;
+background: #FFFFFF;
+border: 1px solid #8CA961;
+border-radius: 8px;
+outline:none;
+}
+.input-email::placeholder{
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+padding-left: 8px;
+line-height: 19px;
+color: rgba(0, 0, 0, 0.54);
+}
+
+.input-password{
+    box-sizing: border-box;
+    margin-top: 27px;
+    width: 290px;
+    height: 38px;
+    background: #FFFFFF;
+    border: 1px solid #8CA961;
+    border-radius: 8px;   
+    outline:none;
+}
+.input-password::placeholder{
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+padding-left: 8px;
+line-height: 19px;
+color: rgba(0, 0, 0, 0.54);
+}
+.button-login{
     
 }
+}
 
+/*Tablet*/
+/* @media only screen and (min-width: 481px){
+
+} */
+
+/*Desktop*/
+/* @media only screen and (min-width: 769){
+
+} */
 
 
 /* .index-header {
