--- a/src/style.css
+++ b/src/style.css
@@ -14,7 +14,8 @@
 
 /*Celular*/
 @media only screen and (max-width: 480px) {
-    .img-login {
+/*login*/
+    .img-logo {
         max-width: 70%;
         margin-top: 30px;
     }
@@ -23,29 +24,34 @@
         font-family: 'Raleway', sans-serif;
         font-style: normal;
         font-weight: 700;
-        font-size: 28px;
+        font-size: 25px;
         line-height: 33px;
         text-align: center;
         color: #194F37;
         margin-top: 50px;
+        margin-bottom: 10px;
     }
 
     .input-email {
         box-sizing: border-box;
-        margin-top: 35px;
         width: 290px;
         height: 38px;
         background: #FFFFFF;
         border: 1px solid #8CA961;
         border-radius: 8px;
         outline: none;
+        margin-top: 27px;
+        font-size: 16px;
+    }
+
+    .input-email[type=text]{
+        padding-left: 8px;
     }
 
     .input-email::placeholder {
         font-style: normal;
         font-weight: 400;
         font-size: 16px;
-        padding-left: 8px;
         line-height: 19px;
         color: rgba(0, 0, 0, 0.54);
     }
@@ -59,15 +65,49 @@
         border: 1px solid #8CA961;
         border-radius: 8px;
         outline: none;
+        font-size: 16px;
+    }
+
+    .input-password[type=password]{
+        padding-left: 8px;
     }
 
     .input-password::placeholder {
         font-style: normal;
         font-weight: 400;
         font-size: 16px;
-        padding-left: 8px;
         line-height: 19px;
         color: rgba(0, 0, 0, 0.54);
+    }
+
+    .div-remember{
+        display: flex;
+        width: 290px;
+        margin-top: 27px;
+        margin-bottom: -10px;
+        flex-direction: row;
+        align-content:center;
+        justify-content:space-around
+        
+    }
+    .input-remember[type='checkbox']{
+        accent-color: #9A4C4C;
+        cursor: pointer;
+    }
+
+    .text-remember{
+        font-family: 'Raleway', sans-serif;
+        font-weight: 400;
+        font-size: 12px; 
+        margin-right: 80px;
+        color: rgba(0, 0, 0, 0.84);
+    }
+    .forget-password{
+        font-family: 'Raleway', sans-serif;
+        font-weight: 400;
+        font-size: 10px;  
+        text-decoration: underline;
+        color: rgba(0, 0, 0, 0.84);
     }
 
     .button-login {
@@ -76,9 +116,133 @@
         border-radius: 39px;
         width: 276px;
         height: 39px;
-        margin-top: 99px;
-    
+        margin-top: 40px;
+        color: #FFFFFF;
+        justify-content: center;
+        font-weight: 700;
+        font-size: 15px;
+        cursor: pointer;
     }
+    .button-google{
+        width: 271px;
+        height: 39px;
+        margin-top: 12px; 
+        background: #FFFFFF;
+        border: 3px solid #8CA961;
+        border-radius: 39px;
+        justify-content: center;
+        font-weight: 500;
+        font-size: 15px;
+        color:#194F37;
+        flex-direction: row-reverse; 
+        cursor: pointer;     
+    }
+   .img-google{
+        width: 20px;
+        padding-right: 10px;
+   }
+
+    hr{  
+        height: 150px; 
+        margin-top: -45px;
+        margin-bottom: -45px;
+        padding-bottom: -10px;
+        transform: rotate(90deg);
+        color: #E89A9F;
+        border-color: #E89A9F;
+        opacity: 40%;
+     }
+    h4{
+        font-family: 'Raleway', sans-serif;
+        font-style: normal;
+        font-weight: 700;
+        color:#194F37;
+        font-size: 15px;
+    }
+    .button-register{
+       width: 145px;
+       height: 39px;
+       margin-top: 25px;
+       background: #9A4C4C;
+       border-radius: 39px; 
+       color: #FFFFFF;
+       border: none;
+       font-weight: 500;
+       justify-content: center;
+       font-size: 15px;
+       cursor: pointer;
+    }
+
+    /*register*/
+    .input-name{
+        box-sizing: border-box;
+        margin-top: 27px;
+        width: 290px;
+        height: 38px;
+        background: #FFFFFF;
+        border: 1px solid #8CA961;
+        border-radius: 8px;
+        outline: none;
+        font-size: 16px;
+    }
+    .input-name[type=text]{
+        padding-left: 8px;
+    }
+    .input-name::placeholder{
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 19px;
+        color: rgba(0, 0, 0, 0.54);
+    }
+    .input-lastname{
+        box-sizing: border-box;
+        margin-top: 27px;
+        width: 290px;
+        height: 38px;
+        background: #FFFFFF;
+        border: 1px solid #8CA961;
+        border-radius: 8px;
+        outline: none; 
+        font-size: 16px;
+    }
+    .input-lastname[type=text]{
+        padding-left: 8px;
+    }
+    .input-lastname::placeholder{
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 19px;
+        color: rgba(0, 0, 0, 0.54);
+    }
+    .button-create-account{
+        background: #E89A9F;
+        border: 3px solid #8CA961;
+        border-radius: 39px;
+        width: 276px;
+        height: 39px;
+        margin-top: 40px;
+        color: #FFFFFF;
+        justify-content: center;
+        font-weight: 700;
+        font-size: 15px;
+        cursor: pointer;
+    }
+    .button-login-back{
+        width: 145px;
+        height: 39px;
+        margin-top: 25px;
+        background: #9A4C4C;
+        border-radius: 39px; 
+        color: #FFFFFF;
+        border: none;
+        font-weight: 500;
+        justify-content: center;
+        font-size: 15px;    
+        cursor: pointer;    
+    }
+
 }
 
 /*Tablet*/
@@ -87,9 +251,26 @@
 } */
 
 /*Desktop*/
-/* @media only screen and (min-width: 769){
+ @media (min-width: 769px){
+    
+    .div-login{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        position: relative;
+        width: 1000px;
+    }
 
-} */
+    .div-pink{
+        background-color: #E89A9F;
+        width: 35%;
+        height: 400px;
+       position: absolute;
+    }
+    .form-login{
+       width: 600px
+    }
+} 
 
 
 /* .index-header {
