--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;500;600;700;800&display=swap');
 
-* {
-    background-color: white;
+body {
     margin: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
-
 /*#root {
     margin-top: 50%;
 }*/
@@ -15,6 +10,15 @@
 /*Celular*/
 @media only screen and (max-width: 480px) {
 /*login*/
+
+    * {
+        background-color: white;
+        margin: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
     .img-logo {
         max-width: 70%;
         margin-top: 30px;
@@ -68,7 +72,7 @@
         font-size: 16px;
     }
 
-    .input-password[type=password]{
+    .input-password[type=password] {
         padding-left: 8px;
     }
 
@@ -80,29 +84,30 @@
         color: rgba(0, 0, 0, 0.54);
     }
 
-    .div-remember{
+    .div-remember {
         display: flex;
         width: 290px;
         margin-top: 27px;
         margin-bottom: -10px;
         flex-direction: row;
         align-content:center;
-        justify-content:space-around
-        
+        justify-content:space-around        
     }
-    .input-remember[type='checkbox']{
+
+    .input-remember[type='checkbox'] {
         accent-color: #9A4C4C;
         cursor: pointer;
     }
 
-    .text-remember{
+    .text-remember {
         font-family: 'Raleway', sans-serif;
         font-weight: 400;
         font-size: 12px; 
         margin-right: 80px;
         color: rgba(0, 0, 0, 0.84);
     }
-    .forget-password{
+
+    .forget-password {
         font-family: 'Raleway', sans-serif;
         font-weight: 400;
         font-size: 10px;  
@@ -123,7 +128,8 @@
         font-size: 15px;
         cursor: pointer;
     }
-    .button-google{
+
+    .button-google {
         width: 271px;
         height: 39px;
         margin-top: 12px; 
@@ -132,34 +138,36 @@
         border-radius: 39px;
         justify-content: center;
         font-weight: 500;
+        display: flex;
         font-size: 15px;
         color:#194F37;
         flex-direction: row-reverse; 
-        cursor: pointer;     
+        cursor: pointer;
+        align-items: center;
     }
-   .img-google{
+
+   .img-google {
         width: 20px;
         padding-right: 10px;
    }
 
-    hr{  
-        height: 150px; 
-        margin-top: -45px;
-        margin-bottom: -45px;
-        padding-bottom: -10px;
-        transform: rotate(90deg);
-        color: #E89A9F;
+    hr {  
+        width: 150px; 
         border-color: #E89A9F;
         opacity: 40%;
+        margin-top: 30px;
+        margin-bottom: 20px;
      }
-    h4{
+
+    h4 {
         font-family: 'Raleway', sans-serif;
         font-style: normal;
         font-weight: 700;
         color:#194F37;
         font-size: 15px;
     }
-    .button-register{
+
+    .button-register {
        width: 145px;
        height: 39px;
        margin-top: 25px;
@@ -174,7 +182,7 @@
     }
 
     /*register*/
-    .input-name{
+    .input-name {
         box-sizing: border-box;
         margin-top: 27px;
         width: 290px;
@@ -185,17 +193,20 @@
         outline: none;
         font-size: 16px;
     }
-    .input-name[type=text]{
+
+    .input-name[type=text] {
         padding-left: 8px;
     }
-    .input-name::placeholder{
+
+    .input-name::placeholder {
         font-style: normal;
         font-weight: 400;
         font-size: 16px;
         line-height: 19px;
         color: rgba(0, 0, 0, 0.54);
     }
-    .input-lastname{
+
+    .input-lastname {
         box-sizing: border-box;
         margin-top: 27px;
         width: 290px;
@@ -206,17 +217,20 @@
         outline: none; 
         font-size: 16px;
     }
-    .input-lastname[type=text]{
+
+    .input-lastname[type=text] {
         padding-left: 8px;
     }
-    .input-lastname::placeholder{
+
+    .input-lastname::placeholder {
         font-style: normal;
         font-weight: 400;
         font-size: 16px;
         line-height: 19px;
         color: rgba(0, 0, 0, 0.54);
     }
-    .button-create-account{
+
+    .button-create-account {
         background: #E89A9F;
         border: 3px solid #8CA961;
         border-radius: 39px;
@@ -229,7 +243,8 @@
         font-size: 15px;
         cursor: pointer;
     }
-    .button-login-back{
+
+    .button-login-back {
         width: 145px;
         height: 39px;
         margin-top: 25px;
@@ -252,35 +267,384 @@
 
 /*Desktop*/
  @media (min-width: 769px){
-    
-    .div-login{
-        display: flex;
+
+    /*Login*/
+
+    body {
         flex-direction: row;
-        align-items: center;
-        position: relative;
-        width: 1000px;
     }
 
-    .div-pink{
+    .img-logo {
+        max-width: 80%;
+        margin-top: 20px;
+        margin-left: 165px;
+    }
+    
+    .div-login {
+        display: flex;
+        flex-direction: row;        
+    }
+
+    .div-pink-login {
         background-color: #E89A9F;
-        width: 35%;
-        height: 400px;
-       position: absolute;
+        width: 45%;
+        height: auto;
     }
-    .form-login{
-       width: 600px
+
+    .form-login {
+       width: 600px;
+       flex-direction: column;
+       display: flex;
+       align-items: center;
+       padding-left: 30px;
     }
+
+    .border-container-login {
+        flex-direction: column;
+        display: flex;
+        align-items: center;
+        border: 1px solid #9A4C4C;
+        box-shadow: 0px 3px 49px 9px rgba(0, 0, 0, 0.06);
+        border-radius: 40px;
+        padding-left: 80px;
+        padding-right: 80px;
+        padding-bottom: 40px;
+        margin-top: 40px;
+        margin-left: 180px;
+        margin-bottom: 40px;
+    }
+
+    h2 {
+        font-family: 'Raleway', sans-serif;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 25px;
+        line-height: 33px;
+        text-align: center;
+        color: #194F37;
+        margin-top: 30px;
+        margin-bottom: 10px;
+    }
+
+    .input-email {
+        box-sizing: border-box;
+        width: 330px;
+        height: 38px;
+        background: #FFFFFF;
+        border: 1px solid #8CA961;
+        border-radius: 8px;
+        outline: none;
+        margin-top: 20px;
+        font-size: 16px;
+    }
+
+    .input-email[type=text] {
+        padding-left: 8px;
+    }
+
+    .input-email::placeholder {
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 19px;
+        color: rgba(0, 0, 0, 0.54);
+    }
+
+    .input-password {
+        box-sizing: border-box;
+        margin-top: 20px;
+        width: 330px;
+        height: 38px;
+        background: #FFFFFF;
+        border: 1px solid #8CA961;
+        border-radius: 8px;
+        outline: none;
+        font-size: 16px;
+    }
+
+    .input-password[type=password] {
+        padding-left: 8px;
+    }
+
+    .input-password::placeholder {
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 19px;
+        color: rgba(0, 0, 0, 0.54);
+    }
+
+    .div-remember {
+        display: flex;
+        width: 320px;
+        margin-top: 18px;
+        margin-bottom: -10px;
+        flex-direction: row;
+        align-content: center;
+        justify-content: space-around;
+        
+    }
+    .input-remember[type='checkbox'] {
+        accent-color: #9A4C4C;
+        cursor: pointer;
+    }
+
+    .text-remember {
+        font-family: 'Raleway', sans-serif;
+        font-weight: 400;
+        font-size: 14px; 
+        margin-right: 80px;
+        color: rgba(0, 0, 0, 0.84);
+    }
+
+    .forget-password {
+        font-family: 'Raleway', sans-serif;
+        font-weight: 400;
+        font-size: 13px;  
+        text-decoration: underline;
+        color: rgba(0, 0, 0, 0.84);
+    }
+
+    .button-login {
+        background: #E89A9F;
+        border: 3px solid #8CA961;
+        border-radius: 39px;
+        width: 330px;
+        height: 39px;
+        margin-top: 30px;
+        color: #FFFFFF;
+        justify-content: center;
+        font-weight: 700;
+        font-size: 15px;
+        cursor: pointer;
+    }
+
+    .button-google {
+        width: 330px;
+        height: 39px;
+        margin-top: 12px; 
+        background: #FFFFFF;
+        border: 3px solid #8CA961;
+        border-radius: 39px;
+        justify-content: center;
+        font-weight: 500;
+        font-size: 15px;
+        color:#194F37;
+        display: flex;
+        flex-direction: row-reverse; 
+        cursor: pointer;
+        align-items: center;
+    }
+
+   .img-google {
+        width: 20px;
+        padding-right: 10px;
+   }
+
+    h4 {
+        font-family: 'Raleway', sans-serif;
+        font-style: normal;
+        font-weight: 700;
+        color:#194F37;
+        font-size: 15px;
+        margin-bottom: 0px;
+    }
+
+    .button-register {
+       width: 145px;
+       height: 39px;
+       background: #9A4C4C;
+       border-radius: 39px; 
+       color: #FFFFFF;
+       border: none;
+       font-weight: 500;
+       justify-content: center;
+       font-size: 15px;
+       cursor: pointer;
+    }
+
+    hr {  
+        width: 200px; 
+        border-color: #E89A9F;
+        opacity: 40%;
+        margin-top: 30px;
+     }
+
+    h4 {
+        font-family: 'Raleway', sans-serif;
+        font-style: normal;
+        font-weight: 700;
+        color:#194F37;
+        font-size: 15px;
+    }
+
+    .button-register {
+       width: 145px;
+       height: 39px;
+       margin-top: 25px;
+       background: #9A4C4C;
+       border-radius: 39px; 
+       color: #FFFFFF;
+       border: none;
+       font-weight: 500;
+       justify-content: center;
+       font-size: 15px;
+       cursor: pointer;
+    }
+
+   /*Register*/
+
+   
+    body {
+        flex-direction: row;
+    }
+
+    .img-logo {
+        max-width: 80%;
+        margin-top: 20px;
+        margin-left: 165px;
+    }
+
+    .div-register {
+        display: flex;
+        flex-direction: row;        
+    }
+
+    .div-pink-register {
+        background-color: #E89A9F;
+        width: 45%;
+        height: auto;
+    }
+
+    .border-container-register {
+        flex-direction: column;
+        display: flex;
+        align-items: center;
+        border: 1px solid #9A4C4C;
+        box-shadow: 0px 3px 49px 9px rgba(0, 0, 0, 0.06);
+        border-radius: 40px;
+        padding-left: 80px;
+        padding-right: 80px;
+        padding-bottom: 40px;
+        margin-top: 40px;
+        margin-left: 180px;
+        margin-bottom: 40px;
+    }
+
+   .input-name {
+        box-sizing: border-box;
+        margin-top: 20px;
+        width: 330px;
+        height: 38px;
+        background: #FFFFFF;
+        border: 1px solid #8CA961;
+        border-radius: 8px;
+        outline: none;
+        font-size: 16px;
+    }
+
+    .input-name[type=text] {
+        padding-left: 8px;
+    }
+
+    .input-name::placeholder {
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 19px;
+        color: rgba(0, 0, 0, 0.54);
+    }
+
+    .input-lastname {
+        box-sizing: border-box;
+        margin-top: 20px;
+        width: 330px;
+        height: 38px;
+        background: #FFFFFF;
+        border: 1px solid #8CA961;
+        border-radius: 8px;
+        outline: none; 
+        font-size: 16px;
+    }
+
+    .input-lastname[type=text] {
+        padding-left: 8px;
+    }
+
+    .input-lastname::placeholder {
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 19px;
+        color: rgba(0, 0, 0, 0.54);
+    }
+
+    .button-create-account {
+        background: #E89A9F;
+        border: 3px solid #8CA961;
+        border-radius: 39px;
+        width: 330px;
+        height: 39px;
+        margin-top: 40px;
+        color: #FFFFFF;
+        justify-content: center;
+        font-weight: 700;
+        font-size: 15px;
+        cursor: pointer;
+    }
+    
+    .button-login-back {
+        width: 145px;
+        height: 39px;
+        margin-top: 25px;
+        background: #9A4C4C;
+        border-radius: 39px; 
+        color: #FFFFFF;
+        border: none;
+        font-weight: 500;
+        justify-content: center;
+        font-size: 15px;    
+        cursor: pointer;    
+    }
+
+    .form-register {
+       width: 600px;
+       flex-direction: column;
+       display: flex;
+       align-items: center;
+       padding-left: 30px;
+    }
+
+    .div-remember {
+        display: flex;
+        width: 320px;
+        margin-top: 18px;
+        margin-bottom: -10px;
+        flex-direction: row;
+        align-content: center;
+        justify-content: space-around;        
+    }
+
+    .input-remember[type='checkbox'] {
+        accent-color: #9A4C4C;
+        cursor: pointer;
+    }
+
+    .text-remember {
+        font-family: 'Raleway', sans-serif;
+        font-weight: 400;
+        font-size: 14px; 
+        margin-right: 80px;
+        color: rgba(0, 0, 0, 0.84);
+    }
+
+    .forget-password {
+        font-family: 'Raleway', sans-serif;
+        font-weight: 400;
+        font-size: 13px;  
+        text-decoration: underline;
+        color: rgba(0, 0, 0, 0.84);
+    }
+
 } 
 
-
-/* .index-header {
-    background: url(img/background.jpg);
-    background-size: cover;
-    background-position: center;
-    height: 750px;
-    width: 100%;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-} */
