--- a/src/style.css
+++ b/src/style.css
@@ -2,14 +2,22 @@
 
 body {
     margin: 0;
+    width: 100%;
+    height: 100%
 }
-/*#root {
-    margin-top: 50%;
-}*/
 
-/*Celular*/
+.root {
+    margin: 0;
+    width: 100%;
+    height: 100%  
+}
+
+/* ************** Celular ************ */
+
+
 @media only screen and (max-width: 480px) {
-/*login*/
+
+/* **** login **** */
 
     * {
         background-color: white;
@@ -181,7 +189,8 @@ body {
        cursor: pointer;
     }
 
-    /*register*/
+    /* **** register **** */
+
     .input-name {
         box-sizing: border-box;
         margin-top: 27px;
@@ -260,15 +269,337 @@ body {
 
 }
 
-/*Tablet*/
-/* @media only screen and (min-width: 481px){
+/* *****************Tablet***************** */
 
-} */
+@media only screen and (min-width: 481px){
+    
+    /* **** Login **** */
 
-/*Desktop*/
+    body {
+        flex-direction: row;
+    }
+
+    .img-logo {
+        max-width: 70%;
+        margin-top: 35px;
+        margin-bottom: 40px;
+    }
+
+    .div-login {
+        display: flex;
+        flex-direction: row;  
+    }
+
+    .form-login {
+       width: 600px;
+       flex-direction: column;
+       display: flex;
+       align-items: center;
+       padding-left: 10%;
+    }
+
+    .border-container-login {
+        flex-direction: column;
+        display: flex;
+        align-items: center;
+        border: 1px solid #9A4C4C;
+        box-shadow: 0px 3px 49px 9px rgba(0, 0, 0, 0.06);
+        border-radius: 40px;
+        padding-left: 80px;
+        padding-right: 80px;
+        padding-bottom: 40px;
+        margin-top: 20px;
+        margin-bottom: 40px;
+    }
+
+    h2 {
+        font-family: 'Raleway', sans-serif;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 22px;
+        line-height: 33px;
+        text-align: center;
+        color: #194F37;
+        margin-top: 30px;
+        margin-bottom: 10px;
+    }
+
+    .input-email {
+        box-sizing: border-box;
+        width: 330px;
+        height: 38px;
+        background: #FFFFFF;
+        border: 1px solid #8CA961;
+        border-radius: 8px;
+        outline: none;
+        margin-top: 20px;
+        font-size: 16px;
+    }
+
+    .input-email[type=text] {
+        padding-left: 8px;
+    }
+
+    .input-email::placeholder {
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 19px;
+        color: rgba(0, 0, 0, 0.54);
+    }
+
+    .input-password {
+        box-sizing: border-box;
+        margin-top: 20px;
+        width: 330px;
+        height: 38px;
+        background: #FFFFFF;
+        border: 1px solid #8CA961;
+        border-radius: 8px;
+        outline: none;
+        font-size: 16px;
+    }
+
+    .input-password[type=password] {
+        padding-left: 8px;
+    }
+
+    .input-password::placeholder {
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 19px;
+        color: rgba(0, 0, 0, 0.54);
+    }
+
+    .div-remember {
+        display: flex;
+        width: 320px;
+        margin-top: 18px;
+        margin-bottom: -10px;
+        flex-direction: row;
+        align-content: center;
+        justify-content: space-around;
+        
+    }
+    .input-remember[type='checkbox'] {
+        accent-color: #9A4C4C;
+        cursor: pointer;
+    }
+
+    .text-remember {
+        font-family: 'Raleway', sans-serif;
+        font-weight: 400;
+        font-size: 13px; 
+        margin-right: 80px;
+        color: rgba(0, 0, 0, 0.84);
+    }
+
+    .forget-password {
+        font-family: 'Raleway', sans-serif;
+        font-weight: 400;
+        font-size: 12px;  
+        text-decoration: underline;
+        color: rgba(0, 0, 0, 0.84);
+    }
+
+    .button-login {
+        background: #E89A9F;
+        border: 3px solid #8CA961;
+        border-radius: 39px;
+        width: 330px;
+        height: 39px;
+        margin-top: 30px;
+        color: #FFFFFF;
+        justify-content: center;
+        font-weight: 700;
+        font-size: 15px;
+        cursor: pointer;
+    }
+
+    .button-google {
+        width: 330px;
+        height: 39px;
+        margin-top: 12px; 
+        background: #FFFFFF;
+        border: 3px solid #8CA961;
+        border-radius: 39px;
+        justify-content: center;
+        font-weight: 500;
+        font-size: 15px;
+        color:#194F37;
+        display: flex;
+        flex-direction: row-reverse; 
+        cursor: pointer;
+        align-items: center;
+    }
+
+   .img-google {
+        width: 20px;
+        padding-right: 10px;
+   }
+
+    h4 {
+        font-family: 'Raleway', sans-serif;
+        font-style: normal;
+        font-weight: 700;
+        color:#194F37;
+        font-size: 15px;
+        margin-bottom: 0px;
+    }
+
+    hr {  
+        width: 200px; 
+        border-color: #E89A9F;
+        opacity: 40%;
+        margin-top: 30px;
+     }
+
+    h4 {
+        font-family: 'Raleway', sans-serif;
+        font-style: normal;
+        font-weight: 700;
+        color:#194F37;
+        font-size: 15px;
+    }
+
+    .button-register {
+       width: 145px;
+       height: 39px;
+       margin-top: 30px;
+       background: #9A4C4C;
+       border-radius: 39px; 
+       color: #FFFFFF;
+       border: none;
+       font-weight: 500;
+       justify-content: center;
+       font-size: 15px;
+       cursor: pointer;
+    }
+
+    /* **** Register **** */
+
+   
+    body {
+        flex-direction: row;
+    }
+
+    .img-logo {
+        max-width: 70%;
+        margin-bottom: 40px;
+    }
+
+    .div-register {
+        display: flex;
+        flex-direction: row;
+        margin-left: 45px;
+    }
+
+    .border-container-register {
+        flex-direction: column;
+        display: flex;
+        align-items: center;
+        border: 1px solid #9A4C4C;
+        box-shadow: 0px 3px 49px 9px rgba(0, 0, 0, 0.06);
+        border-radius: 40px;
+        padding-left: 80px;
+        padding-right: 80px;
+        padding-bottom: 40px;
+        margin-top: 20px;
+        margin-bottom: 40px;
+    }
+
+   .input-name {
+        box-sizing: border-box;
+        margin-top: 20px;
+        width: 330px;
+        height: 38px;
+        background: #FFFFFF;
+        border: 1px solid #8CA961;
+        border-radius: 8px;
+        outline: none;
+        font-size: 16px;
+    }
+
+    .input-name[type=text] {
+        padding-left: 8px;
+    }
+
+    .input-name::placeholder {
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 19px;
+        color: rgba(0, 0, 0, 0.54);
+    }
+
+    .input-lastname {
+        box-sizing: border-box;
+        margin-top: 20px;
+        width: 330px;
+        height: 38px;
+        background: #FFFFFF;
+        border: 1px solid #8CA961;
+        border-radius: 8px;
+        outline: none; 
+        font-size: 16px;
+    }
+
+    .input-lastname[type=text] {
+        padding-left: 8px;
+    }
+
+    .input-lastname::placeholder {
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 19px;
+        color: rgba(0, 0, 0, 0.54);
+    }
+
+    .button-create-account {
+        background: #E89A9F;
+        border: 3px solid #8CA961;
+        border-radius: 39px;
+        width: 330px;
+        height: 39px;
+        margin-top: 40px;
+        color: #FFFFFF;
+        justify-content: center;
+        font-weight: 700;
+        font-size: 15px;
+        cursor: pointer;
+    }
+    
+    .button-login-back {
+        width: 145px;
+        height: 39px;
+        margin-top: 25px;
+        background: #9A4C4C;
+        border-radius: 39px; 
+        color: #FFFFFF;
+        border: none;
+        font-weight: 500;
+        justify-content: center;
+        font-size: 15px;    
+        cursor: pointer;    
+    }
+
+    .form-register {
+       width: 600px;
+       flex-direction: column;
+       display: flex;
+       align-items: center;
+       padding-left: 30px;
+    }
+
+}
+
+/******************* Desktop **************** */
+
  @media (min-width: 769px){
 
-    /*Login*/
+    /* **** Login **** */
 
     body {
         flex-direction: row;
@@ -282,11 +613,15 @@ body {
 
     .img-people {
         max-width: 80%;
+        position: absolute;
+        margin-left: 110px;
+        margin-top: 70px;
     }
     
     .div-login {
         display: flex;
-        flex-direction: row;        
+        flex-direction: row;
+        position: relative;
     }
 
     .div-pink-login {
@@ -313,7 +648,7 @@ body {
         padding-left: 80px;
         padding-right: 80px;
         padding-bottom: 40px;
-        margin-top: 40px;
+        margin-top: -5px;
         margin-left: 180px;
         margin-bottom: 40px;
     }
@@ -496,7 +831,7 @@ body {
        cursor: pointer;
     }
 
-   /*Register*/
+   /* **** Register **** */
 
    
     body {
@@ -507,6 +842,13 @@ body {
         max-width: 80%;
         margin-top: 20px;
         margin-left: 165px;
+    }
+
+    .img-people-register{
+        max-width: 80%;
+        position: absolute;
+        margin-left: 110px;
+        margin-top: 155px;
     }
 
     .div-register {
@@ -530,7 +872,7 @@ body {
         padding-left: 80px;
         padding-right: 80px;
         padding-bottom: 40px;
-        margin-top: 40px;
+        margin-top: 0px;
         margin-left: 180px;
         margin-bottom: 40px;
     }
