--- a/src/style.css
+++ b/src/style.css
@@ -117,7 +117,6 @@ body {
         display: flex;
         width: 290px;
         margin-top: 27px;
-        margin-bottom: -10px;
         flex-direction: row;
         align-content: center;
         justify-content: space-around
@@ -209,7 +208,8 @@ body {
         font-size: 15px;
         cursor: pointer;
     }
-    .error-text{
+
+    .error-text {
         color: rgb(165, 90, 43);
         font-family: 'Raleway', sans-serif;
         font-weight: bolder;
@@ -305,7 +305,7 @@ body {
         cursor: pointer;
     }
 
-    .error-text-register{
+    .error-text-register {
         color: rgb(165, 90, 43);
         font-family: 'Raleway', sans-serif;
         font-weight: bolder;
@@ -315,6 +315,7 @@ body {
     /*******************/
     /* **** Timeline **** */
     /*******************/
+    
 
     .div-timeline {
         display: flex;
@@ -327,13 +328,13 @@ body {
         flex-direction: row;
         margin-top: 2%;
         justify-content: space-around;
-        
+
     }
 
     .img-logo-VB {
         max-width: 25%;
         margin-right: 10px;
-        
+
     }
 
     .img-user {
@@ -361,9 +362,49 @@ body {
         color: #9A4C4C;
     }
 
-    .hr-timeline {
+    .hr-timeline, .hr-timeline-post {
         width: 100%;
     }
+
+    .div-post {
+        width: 100%;
+    }
+
+    .input-post {
+        width: 80%;
+        margin-bottom: 30px;
+        border: none;
+    }
+
+    .input-post::placeholder {
+        font-style: normal;
+        font-family: 'Raleway', sans-serif;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 19px;
+        color: rgba(0, 0, 0, 0.54);
+    }
+
+    .div-post-actions {
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: space-around;
+        width: 100%;
+    }
+
+    .button-post {
+        width: 90px;
+        height: 39px;
+        background: #9A4C4C;
+        border-radius: 39px;
+        color: #FFFFFF;
+        border: none;
+        font-weight: 500;
+        justify-content: center;
+        font-size: 15px;
+        cursor: pointer;
+    }
+    
 
 }
 
@@ -487,7 +528,6 @@ body {
         display: flex;
         width: 320px;
         margin-top: 18px;
-        margin-bottom: -10px;
         flex-direction: row;
         align-content: center;
         justify-content: space-around;
@@ -581,7 +621,7 @@ body {
         cursor: pointer;
     }
 
-    .error-text{
+    .error-text {
         color: rgb(165, 90, 43);
         font-family: 'Raleway', sans-serif;
         font-weight: bolder;
@@ -723,12 +763,17 @@ body {
         display: flex;
         align-items: center;
     }
-    .error-text-register{
+
+    .error-text-register {
         color: rgb(165, 90, 43);
         font-family: 'Raleway', sans-serif;
         font-weight: bolder;
         font-size: 15px;
     }
+
+    /*******************/
+    /* ** Timeline ** */
+    /*******************/
 
 }
 
@@ -856,7 +901,7 @@ body {
         display: flex;
         width: 320px;
         margin-top: 18px;
-        margin-bottom: -10px;
+        margin-bottom: 15px;
         flex-direction: row;
         align-content: center;
         justify-content: space-around;
@@ -890,7 +935,7 @@ body {
         border-radius: 39px;
         width: 330px;
         height: 39px;
-        margin-top: 30px;
+        margin-top: 15px;
         color: #FFFFFF;
         justify-content: center;
         font-weight: 700;
@@ -963,8 +1008,9 @@ body {
         font-size: 15px;
         cursor: pointer;
     }
-    .error-text{
-        color:  rgb(165, 90, 43);
+
+    .error-text {
+        color: rgb(165, 90, 43);
         font-family: 'Raleway', sans-serif;
         font-weight: bolder;
         font-size: 15px;
@@ -1081,7 +1127,7 @@ body {
         border-radius: 39px;
         width: 330px;
         height: 39px;
-        margin-top: 40px;
+        margin-top: 15px;
         color: #FFFFFF;
         justify-content: center;
         font-weight: 700;
@@ -1115,7 +1161,6 @@ body {
         display: flex;
         width: 320px;
         margin-top: 18px;
-        margin-bottom: -10px;
         flex-direction: row;
         align-content: center;
         justify-content: space-around;
@@ -1142,11 +1187,123 @@ body {
         color: rgba(0, 0, 0, 0.84);
     }
 
-    .error-text-register{
+    .error-text-register {
         color: rgb(165, 90, 43);
         font-family: 'Raleway', sans-serif;
         font-weight: bolder;
         font-size: 15px;
+        margin-top: 10px;
+    }
+
+    .error-text-hidden {
+        display: none;
+    }
+
+    /*******************/
+    /* ** Timeline ** */
+    /*******************/
+
+    .div-timeline {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .div-navegation {
+        display: flex;
+        flex-direction: row;
+        margin-top: 3%;
+        align-items: center;
+        justify-content: space-around;
+    }
+
+    .img-logo-VB {
+        display: none;
+    }
+
+    .img-logo-timeline-desktop {
+        max-width: 30%;
+    }
+
+    .img-user {
+        max-width: 35%;
+        border-radius: 50%;
+        margin-bottom: 3%;
+        border: 2px solid #9A4C4C;
+        margin-left: 7%;
+    }
+
+    .img-logout {
+        max-width: 4%;
+        margin-left: -6%;
+    }
+
+    .div-Profile-User {
+        flex-direction: row-reverse;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-left: 30%;
+    }
+
+    .user-Name {
+        font-size: 20px;
+        font-family: 'Raleway', sans-serif;
+        color: #9A4C4C;
+    }
+
+    .hr-timeline, .hr-timeline-post {
+        display: none;
+    }
+
+    .div-post {
+        width: 70%;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        border: 1px solid #194F37;
+    }
+
+    .input-post {
+        width: 80%;
+        height: 100px;
+        margin-top: 30px;
+        margin-bottom: 30px;
+        border-color: #E89A9F;
+        border-radius: 10px;
+        font-family: 'Raleway', sans-serif;
+        font-size: 20px;
+        padding: 5px 10px;
+    }
+
+    .input-post::placeholder {
+        font-style: normal;
+        font-family: 'Raleway', sans-serif;
+        font-weight: 400;
+        font-size: 20px;
+        padding: 30px 10px;
+        line-height: 19px;
+        color: rgba(0, 0, 0, 0.54);
+    }
+
+    .div-post-actions {
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: space-around;
+        width: 100%;
+    }
+
+    .button-post {
+        width: 90px;
+        height: 39px;
+        background: #9A4C4C;
+        border-radius: 39px;
+        color: #FFFFFF;
+        border: none;
+        font-weight: 500;
+        justify-content: center;
+        font-size: 15px;
+        cursor: pointer;
     }
 
 }
