Agregamos dos clases al logo VB

--- a/src/style.css
+++ b/src/style.css
@@ -312,9 +312,9 @@ body {
         font-size: 15px;
     }
 
-    /*******************/
+    /***********************/
     /* **** Timeline **** */
-    /*******************/
+    /*********************/
     
 
     .div-timeline {
