--- a/src/style.css
+++ b/src/style.css
@@ -446,6 +446,18 @@ body {
         padding-left: 10px;
         margin-top: 10px; 
     }
+
+    .email-user{
+        font-family: 'Raleway', sans-serif;  
+        color: #536471;  
+        font-size: 12px;
+    }
+
+    .div-name-email{
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+    }
 }
 
 
@@ -866,13 +878,13 @@ body {
     }
 
     .div-post {
-        width: 70%;
+        width: 85%;
         border: 2px solid #CCA5A5;
         border-radius: 10px;
         display: flex;
         flex-direction: column;
         align-items: center;
-        
+        margin-bottom: 30px;
     }
 
     .input-post {
@@ -918,20 +930,24 @@ body {
         cursor: pointer;
     }
 
+    /* **** Timeline Posts *****/
+
     .div-user-post{
-    display: flex;
-    align-items: baseline;
-    margin-bottom: 10px;
-    width: 100%;
-    border: 1px solid #194F37;
-    height: 153px;
-    border-radius: 16px;
+        display: flex;
+        align-items: baseline;
+        margin-bottom: 15px;
+        border: 1px solid #194F37;
+        height: 153px;
+        border-radius: 16px;
+        flex-direction: column;
+        width: 100%;
     }
 
     .div-user-image-and-username{
         display: flex;
         flex-direction: row;
         margin-left: 10px;
+        align-items: center;
     }
     .img-user-post{
         margin: 10px;
@@ -951,6 +967,26 @@ body {
         padding-left: 10px;
         margin-top: 10px; 
     }
+
+    .email-user{
+        font-family: 'Raleway', sans-serif;  
+        color: #536471;  
+        font-size: 12px;
+    }
+
+    .div-name-email{
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+    }
+    .publications-container-class{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 100%;
+    }
+
+    
 }
 
 /******************* Desktop **************** */
